<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_bottom_menu_height"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/main_bottom_menu_content"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">

        <LinearLayout
            android:id="@+id/main_bottom_menu_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_menu_home_img"
                android:layout_width="@dimen/main_bottom_img_size"
                android:layout_height="@dimen/main_bottom_img_size"
                android:background="@drawable/btn_shouye" />

            <TextView
                android:id="@+id/main_bottom_menu_home_text"
                style="@style/gray16Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom_menu_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_menu_community_img"
                android:layout_width="@dimen/main_bottom_img_size"
                android:layout_height="@dimen/main_bottom_img_size"
                android:background="@drawable/btn_shouye" />

            <TextView
                android:id="@+id/main_bottom_menu_community_text"
                style="@style/gray16Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom_menu_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_menu_shop_img"
                android:layout_width="@dimen/main_bottom_img_size"
                android:layout_height="@dimen/main_bottom_img_size"
                android:background="@drawable/btn_shouye" />

            <TextView
                android:id="@+id/main_bottom_menu_shop_text"
                style="@style/gray16Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom_menu_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_bottom_menu_me_img"
                android:layout_width="@dimen/main_bottom_img_size"
                android:layout_height="@dimen/main_bottom_img_size"
                android:background="@drawable/btn_shouye" />

            <TextView
                android:id="@+id/main_bottom_menu_me_text"
                style="@style/gray16Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/main_bottom_menu_content"
        android:background="@color/gray" />

</RelativeLayout>